src/styles/globals.css
/* ... */
.artist-dev__header {
  font-size: 2.5rem;
  font-weight: 800;
  margin-bottom: 3rem;
}
.artist-dev__text {
  font-size: 1.25rem;
  color: var(--accent1);
  font-weight: 400;
  max-width: 500px;
}
.artist-dev__text--spacing-sm {
  margin-bottom: 2rem;
}
.artist-dev__text--spacing-lg {
  margin-bottom: 6rem;
}
.artist-dev-icons-wrapper {
  display: flex;
  gap: 3.75rem;
}
.artist-dev-feature-wrapper {
  display: flex;
  align-items: center;
  gap: 1rem;
}
.artist-dev-feature-icon-wrapper {
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: var(--secondary);
  height: 4.5rem;
  width: 4.5rem;
  border-radius: 1rem;
}
.artist-dev__icon {
  color: var(--primary);
  font-size: 2rem;
}
.artist-dev-feature__text {
  font-weight: 700;
  font-size: 0.875rem;
}

/* Pricing style */
.pricing-wrapper {
  height: 800px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}
.pricing-text-wrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin-bottom: 1rem;
}
.pricing__header {
  font-size: 2.5rem;
  font-weight: 800;
  color: var(--dark);
  margin-bottom: 3rem;
}
.pricing__subheader {
  font-size: 0.75rem;
  font-weight: 700;
  color: var(--accent1);
  text-transform: uppercase;
  letter-spacing: 3px;
  margin-bottom: 1rem;
}
.pricing__sub-subheader {
  font-size: 1.25rem;
  font-weight: 400;
  color: var(--accent1);
}
/* Pricing cards */
.pricing-cards-wrapper {
  display: flex;
  align-items: center;
  gap: 2rem;
}
.pricing-card {
  box-shadow: 0 8px 16px 0 rgba(21, 65, 132, 0.2);
  border-radius: 1rem;
  width: 22rem;
  padding: 1.5rem 2rem;
  height: fit-content;
}
.pricing-card--lg {
  padding-bottom: 3.175rem;
}

.pricing-card-best-seller-wrapper {
  display: flex;
  justify-content: space-between;
}
.pricing-card__best-seller {
  background-color: var(--primary);
  border-radius: 100vmax;
  color: var(--white);
  font-size: 0.675rem;
  font-weight: 500;
  padding: 0 1rem;
  display: flex;
  align-items: center;
}
.pricing-card__header {
  font-size: 1.25rem;
  font-weight: 500;
  color: var(--dark-blue-fade);
  margin-bottom: 0.5rem;
}
.pricing-card__price {
  font-size: 2.5rem;
  color: var(--dark-blue);
  font-weight: 400;
  margin-bottom: 2rem;
}
.pricing-card__text {
  font-size: 1rem;
  font-weight: 400;
  color: var(--dark-blue-fade);
  margin-bottom: 2rem;
}
.pricing-card--lg .pricing-card-features-wrapper {
  margin-bottom: 3rem;
}
.pricing-card-features-wrapper {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
  margin-bottom: 2rem;
}
.pricing-card-feature-wrapper {
  display: flex;
  align-items: center;
  gap: 0.75rem;
}
.pricing-card__icon-bg {
  background-color: var(--green-fade);
  height: 2rem;
  width: 2rem;
  border-radius: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
}
.pricing-card__icon {
  color: #3f923d;
}
.pricing-card__feature-text {
  font-size: 0.75rem;
}
.pricing-card__btn {
  padding: 0 1.5rem;
  width: fit-content;
  display: flex;
  align-items: center;
}
.pricing-card__btn--album {
  background-color: #475a76;
  color: var(--white);
  font-weight: 600;
}
.pricing-card__chevron {
  font-size: 1.25rem;
}
.pricing-card__mail {
  margin-right: 4px;
}
/* Testimonials styling */
.testimonials {
  height: 800px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}
.testimonials-heading-wrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
}
.testimonials__header {
  font-size: 2.5rem;
  font-weight: 800;
  margin-bottom: 2.5rem;
  color: var(--dark-blue);
}
.testimonials__subheader {
  font-size: 1.25rem;
  font-weight: 400;
  margin-bottom: 2.5rem;
  color: var(--accent1);
  max-width: 300px;
}
/* Testimonials card section */
.testimonials-carousel {
  display: flex;
  gap: 2rem;
}
.testimonials-card {
  box-shadow: 0 16px 32px 0 rgba(21, 65, 132, 0.2);
  border-radius: 1rem;
  width: 16rem;
  border: 1px solid #e4edfb;
  padding: 1.5rem;
}

.testimonials-card-image-wrapper {
  height: 3.125rem;
  width: 3.125rem;
  margin-bottom: 1.5rem;
}
.testimonials-card__image {
  height: 100%;
  width: 100%;
  object-fit: cover;
  border-radius: 50%;
}
.testimonials-card__text {
  font-size: 1.25rem;
  font-weight: 400;
  color: var(--dark-blue-fade);
  margin-bottom: 1.5rem;
}
.testimonials-card__text--bold {
  font-weight: 700;
}
.testimonials-card-person-line-wrapper {
  display: flex;
  align-items: center;
  gap: 8px;
}
.testimonials-card__line {
  height: 1px;
  width: 1rem;
  background-color: rgba(130, 134, 139, 0.48);
}
.testimonials-card__person {
  font-size: 0.675rem;
  color: rgba(130, 134, 139, 0.48);
}
/* Footer styling */
.footer {
  height: 500px;
  max-height: 600px;
  background-color: var(--secondary);
  width: 100%;
  padding-top: 3rem;
  text-align: center;
  color: var(--dark-blue);
}
.footer-content-wrapper {
  width: 70rem;
  display: grid;
  justify-content: center;
  align-items: flex-start;
  grid-template-columns: repeat(5, 10rem);
  grid-template-rows: repeat(1, 452px);
  column-gap: 2rem;
}
.footer__column {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}
.footer__header {
  font-size: 1rem;
  font-weight: 700;
  margin-bottom: 1.5rem;
}
.footer__subheader {
  font-weight: 500;
  font-size: 0.875rem;
  margin-bottom: 1.5rem;
}
.footer__subheader--smgap {
  margin-bottom: 1.25rem;
}
.footer-icon-text-wrapper {
  display: flex;
  align-items: center;
  gap: 6px;
  margin-bottom: 1.5rem;
}
.footer__text {
  font-size: 0.75rem;
  text-align: left;
  font-weight: 400;
}
.footer__icon {
  color: var(--dark-blue);
}
.footer__icon--pin {
  font-size: 1.25rem;
}
.footer__icon--mail {
  font-size: 0.875rem;
}
.footer__link {
  margin-bottom: 1rem;
  font-size: 0.75rem;
  color: var(--dark-blue);
  font-weight: 400;
}
/* ... */

